<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">エコ行動記録アプリ</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_data">no data</string>
    <string name="comment_relaxed">つぶやき</string>
    <string name="tw_setting">twitter setting</string>
    <string name="button_post_comment">投稿</string>
    <string name="input_log">エコ行動記録</string>
    <string name="update">更新</string>
    <string name="input_fix">この情報を登録</string>
    <string name="input_log_item_name">内容</string>
    <string name="input_log_item_amount">金額</string>
    <string name="input_log_item_category">費目</string>
    <string name="input_log_item_created">入力日時</string>
    <string name="activity_animation_duration">100</string>
    <string name="outer_log">オフライン登録</string>
    <string name="comment_hashtag">#ecosnsのみ</string>
    <string name="comment_hashtag_off">全て表示</string>
    <string name="comment_setting">twitterに再ログイン</string>
    <string name="comment_reload">更新</string>
    <string name="callback">http://sns.uozias.jp</string>
    <string name="consumer_key">AJOoyPGkkIRBgmjAtVNw</string>
    <string name="consumer_secret">1OMzUfMcqy4QHkyT6jJoUyxN4KXEu7R87k3bVOzp8c</string>
    <string name="logReadURI">http://163.43.160.182/ecosns/log</string>
    <string name="logSendURI">http://163.43.160.182/ecosns/log/new</string>
    <string name="logUpdateURI">http://163.43.160.182/ecosns/log/</string>
    <string name="commentReadURI">http://163.43.160.182/ecosns/comment</string>
    <string name="commentSendURI">http://163.43.160.182/ecosns/comment/new</string>
    <string name="summarySendURI">http://163.43.160.182/ecosns/comment</string>
    <string name="summaryReadURI">http://163.43.160.182/ecosns/summary</string>
    <string name="summaryUpdateURI">http://163.43.160.182/ecosns/summary/</string>
    <string name="synchronize_log">家計簿同期</string>
    <string name="stress_change">ストレス切替</string>
    <string name="only_me">自分のだけ表示</string>
    <string name="all_users">全体表示</string>
    <string name="ipp_login">再ログイン</string>
    <string name="others_summary">他の人の家計簿</string>
    <string name="my_summary">あなたの家計簿</string>
    <string name="check_tweet">ツイッターに投稿</string>
    <string name="log_reload">更新</string>
    <string name="reply_to_comment">返信</string>
    <string name="showConversation">会話を表示</string>
    <string name="backToCommentFragment">コメント画面へ戻る</string>
    <string name="title_activity_replies">RepliesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="take_picture">写真を撮る</string>
    <string name="input_log_item_coe_amount">原油換算(L)</string>
    <string name="input_log_item_co2_label">CO2換算約</string>
    <string name="input_log_item_money_label">約</string>
    <string name="input_log_item_co2_amount">gの省エネ</string>
    <string name="input_log_item_money_amount">円の節約</string>
    <string name="additionalGet">更に読み込む</string>
    <string name="this_month">今月</string>
    <string name="select_month">月選択</string>
    <string name="tab_team_cohesive">チーム</string>
    <string name="tab_comment_cohesive">交流掲示板</string>
    <string name="tab_others_cohesive">みんなの記録</string>
    <string name="tab_summary_relaxed">自分の記録</string>
    <string name="tab_mixed_relaxed">タイムライン</string>
    <string name="tab_neighbor_relaxed">ご近所</string>
    <string name="instruction_peb_list">実行したエコ行動を選択</string>
    <string name="screen_name_label_in_summary_fragment">さんの</string>
    <string name="summary_number_label_after">回実行</string>
    <string name="summary_number_label">今月エコ行動を</string>
    <string name="summary_rank_label">グループで</string>
    <string name="summary_rank_label_after">位</string>
    <string name="month_label_in_summary_fragment">月のまとめ</string>
    <string name="password_label">パスワード</string>
    <string name="user_name_label">ユーザ名</string>
    <string name="screen_name_label">ニックネーム</string>
    <string name="login_label">ログイン</string>
    <string name="login_instruction">ログインして下さい</string>
    <string name="url_ipp_login">http://133.242.42.29:8080/IPP_UserWebConsole/login </string>
    <string name="login_instruction_bottom">はじめて利用する時は下のボタンを押してアプリ設定をして下さい。詳しくはマニュアルを御覧ください。</string>
    <string name="title_activity_ippweb_view">IPPWebViewActivity</string>
    <string name="button_label_back_to_main_in_ippwebview">アプリに戻る</string>
    <string name="button_go_to_ippwebview_in_ipplogin">アプリ設定</string>
    <string name="instruction_input_comment">コメントを入力</string>
    <string name="message_camera_cannot_used_in_inputlog">ご使用の機種では写真を取得出来ません。</string>
    <string name="instruction_place">エコな行動の種類を選択</string>
    <string name="button_indoor">家庭内</string>
    <string name="button_outdoor">屋外その他</string>
    <string name="button_log_peb">節約・工夫</string>
    <string name="button_log_purchase">商品購入</string>
    <string name="input_log_item_product_mark_label_before">ラベル:</string>
    <string name="new_product">リストにない商品を登録</string>
    <string name="new_peb">リストにないエコ行動を登録</string>
    <string name="label_product_selected_price">価格</string>
    <string name="label_product_selected_name">品名</string>
    <string name="label_product_selected_mark">環境ラベル</string>
    <string name="prompt_product_selected_mark">環境ラベルを選択</string>
    <string name="label_peb_selected_name">行動内容</string>
	<string name="toast_too_short_peb_name">エコ行動の名前を入力して下さい。</string>
	<string name="label_product_selected_producer">生産者</string>

	<string name="input_log_item_price_after">円</string>
	<string name="input_log_item_price_label">エコな商品にかけた金額</string>
	<string name="input_log_item_price_amount">円</string>
	<string name="input_log_item_product_producer_label_before">生産者</string>
	<string name="screen_name_in_label_after">さんの</string>
	<string name="name_model_comment">コメント</string>
	<string name="name_model_log">エコ報告</string>
	<string name="name_role_senpai">先輩</string>
	<string name="name_role_kouhai">後輩</string>
	<string name="label_mutter_mixed">つぶやく</string>
	<string name="label_of_number_of_star">×</string>
	<string name="buton_evaluate_it">評価する</string>
	<string name="near">この近くだけ表示</string>
	<string name="near_cancel">近く以外も表示</string>
	<string name="message_network_disabled">圏外です。</string>
	<string name="label_content_reply">返信の内容</string>
	<string name="button_calcel_reply_to_comment">返信をやめる</string>
	<string name="text_reply_hint">返信内容を入力</string>
	<string name="text_comment_hint">投稿内容を入力</string>

</resources>