<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IPPLoginActivity" >

       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/green"
        android:text="@string/login_instruction" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_name_label" />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
         >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label" />

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/green"
        android:text="@string/screen_name_label" />

     <TextView
          android:id="@+id/IPPScreenName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

         <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/login_instruction_bottom"
        android:padding="8dp"
        />

         <Button
             android:id="@+id/button_go_to_ippwebview_in_ipplogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_go_to_ippwebview_in_ipplogin" />

</LinearLayout>